package Missions_data;


public class Curse {

    private String name;
    private String threatLevel;

    public void setName(String name){
        this.name = name;
    }

    public String getName() {
        return name;
    }

    public void setThreatLevel(String threatLevel){
        this.threatLevel = threatLevel;
    }

    public String getThreatLevel() {
        return threatLevel;
    }
}
